# birdlife

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
avian/scripts/: README.md  build_masks.py  cutout_flood.py  irish_labels.py
birdnet/: listen.py  push.py
collage/: .gitignore  .rubocop.yml  Gemfile  README.md  package.json
collage/config/: application.rb  bird_lore.yml  database.yml  feilire.yml  routes.rb
collage/db/: schema.rb  seeds.rb
collage/public/: birds
collage/spec/: rails_helper.rb
dashboard/config/: application.rb  database.yml  routes.rb
dashboard/db/: seeds.rb
dashboard/public/: birds
deploy/: DEPLOY.md  Dockerfile.armcheck  Dockerfile.armcheck.dockerignore  birdlife-almanac.service  birdlife-almanac.timer  birdlife-frame.service  birdlife-frame.timer  birdlife-listener.service  birdlife-litestream.service  birdlife-push.service  birdlife-restore.service  birdlife-summary.service  birdlife-summary.timer  birdlife-web.service  ealta-listener.service  ealta-litestream.service  ealta-web.service  litestream.yml  net.culfinbirds.push.plist  provision.sh
frame/: birdweather.py  display.py  shoot.py
frame/connemara/: README.md  __init__.py  mockdata.py  model.py  names.py  preview.py  render.py  test_smoke.py  theme.py
infra/: .terraform.lock.hcl  README.md  cdn.tf  ecs.tf  outputs.tf  rds.tf  secrets.tf  ses.tf  terraform.tfvars.example  variables.tf
infrastructure/: README.md  cdn.tf  ecr.tf  github_oidc.tf  terraform.tfvars.example  variables.tf  versions.tf
listener/: listen.py  push.py
pipeline/scripts/: README.md  build_masks.py  cutout.py  cutout_flood.py  irish_labels.py  pregen.py  verify.py
shooter/: inky_selftest.py  shoot.py
stations/example/: station.yml
(+200 files in other folders)
