[project]
name = "birdlife"
version = "0.1.0"
description = "Python edges of the Connemara bird detector: BirdNET listener + the illustration pipeline."
# Pinned to 3.12: TensorFlow (via birdnetlib) has no wheels for 3.14 yet.
requires-python = "==3.12.*"
dependencies = [
    # Image handling for the illustration pipeline (generate/cutout/masks).
    # Kept light: background removal uses a Pillow flood-fill, not rembg, whose
    # numba/llvmlite chain conflicts with the BirdNET stack here.
    "pillow>=10",
    # numpy + scipy power the cutout: vectorised sentinel removal and the
    # connected-component despeckle that sweeps stray flecks. (scipy also rides
    # in via librosa, but the cutout depends on it directly, so declare it.)
    "numpy>=1.24",
    "scipy>=1.10",
    # BirdNET listener: analyse recordings or the live mic into detections.
    "birdnetlib>=0.18",
    "librosa>=0.10",
    "sounddevice>=0.4",
    # The frame shooter: screenshot the /panel page to push to the Inky.
    "playwright>=1.40",
    # TFLite backend for birdnetlib — Google's lightweight LiteRT runtime, with
    # wheels for both macOS arm64 and the Pi (linux aarch64) and Python 3.10-3.14.
    # birdnetlib imports `tflite_runtime`, so listen.py aliases this to it. This
    # replaces full TensorFlow: lighter on the Mac, and Pi-appropriate (full TF
    # is far too heavy for a Pi).
    "ai-edge-litert>=2.1",
]

# The Inky push (Pimoroni `inky`) is Pi-only — it pulls SPI/GPIO libraries that
# can't resolve on macOS — so the shooter lazy-imports it and the Pi installs it
# separately (see deploy/DEPLOY.md). It is deliberately NOT a project dependency.

[tool.uv]
# Managed by `uv sync`; the lockfile (uv.lock) is the Gemfile.lock analog.
